WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
236958
css/css-grid/subgrid/repeat-auto-fill-003.html fails
https://bugs.webkit.org/show_bug.cgi?id=236958
Summary
css/css-grid/subgrid/repeat-auto-fill-003.html fails
Matt Woodrow
Reported
2022-02-20 23:32:20 PST
5/28 of the sub-tests look to be vertically aligned slightly different (but are otherwise identical).
Attachments
Reduced test case.
(576 bytes, text/html)
2022-03-29 15:44 PDT
,
Matt Woodrow
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-20 23:32:30 PST
<
rdar://problem/89219642
>
Matt Woodrow
Comment 2
2022-02-27 18:36:20 PST
It looks like this is an existing issue, that isn't specific to subgrid.
https://webkit-search.igalia.com/webkit/rev/1cc94bc83c8db7dbc704f108d37fe29909a06736/Source/WebCore/rendering/RenderGrid.cpp#1404-1410
It looks like we give up trying to compute a baseline for the grid container if the selected child is orthogonal, which it is in this test.
Matt Woodrow
Comment 3
2022-03-29 15:44:00 PDT
Created
attachment 456070
[details]
Reduced test case.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug