[GridNG] Flip rows and columns for orthogonal sugrids

Orthogonal grids flip rows and columns, and subgrids need to support
this when combining lines from the parent grid. This gets us to pass
repeat-auto-fill-003.html, however a slight adjustment was made to the
the test because baselines didn't match the reference. We match WebKit,
but Firefox appears to have a bug with orthogonal baselines. I came
across this WebKit discussion that implies that *they* are incorrect
(and thus we would be too), but I believe Firefox is incorrect here.
See [this discussion](https://bugs.webkit.org/show_bug.cgi?id=236958).

Note that as of the most recent rebase, it picked up
https://chromium-review.googlesource.com/c/chromium/src/+/4355553,
and repeat-auto-fill-003.html no longer passes, so it was added back
to TestExpectations. This should start passing once those regressions
are fixed.

Either way, this behavior is unrelated to the actual test content, so
I made some adjustments to get the baselines to match in all
aforementioned platforms. In particular, I set `line-height`to zero and
set `vertical-align` to `top`.

repeat-auto-fill-003.html is an interesting case, and I believe it's
the only test with nested orthogonal subgrids, so I added a new test
that covers more than auto repeat behaviors.

These changes exposed a bug from my prior auto repeat checkin - the
adjustment for non-repeat lines that come after an auto repeater
shouldn't happen on nested subgrids, as it will shift lines multiple
times for each level of nesting. Ideally, this would happen when we
add the non-repeat named lines. For now, I added a TODO, as this will
require some additional work and testing.

Bug: 618969
Change-Id: Ic8c42189d0563e6b2ed4f322ae89b0583c1fb519
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4355586
Reviewed-by: Alison Maher <almaher@microsoft.com>
Reviewed-by: Ethan Jimenez <ethavar@microsoft.com>
Commit-Queue: Kurt Catti-Schmidt <kschmi@microsoft.com>
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1122607}